--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "getting-rusty"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [profile.release]
 debug = 1
 
 [build]
-rustflags = ["-C", "symbol-mangling-version=v0"]
+# rustflags = ["-C", "symbol-mangling-version=v0"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-running-average = {version="0.1.0"}
 glam = { version = "0.29.0"}
 sdl2 = { version = ">=0.35", features=["gfx","image"] }
